# HUBOBench

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
compiler/: agg_runner.py
compiler/reduction/: rosenberg.py
compiler/solver_io/: dirac3.py  gurobi_miqp.py  gurobi_nlfunc.py  sa_openjij.py
compiler/solver_io/helpers/: solution_writer.py
compiler/solvers/: run_dirac3.py  run_gurobi_miqp.py  run_gurobi_nlfunc.py  run_sa_openjij.py
data/: config.py  synthetic_generator.py
data/encoding/: apply_cardinality.py  compute_diagnostics.py  instance_builder.py
docs/: schema.sql
docs/hubobench/: problem_schema.md  solution_schema.md
docs/limits/: SA_OpenJij_limits.md  dirac3_limits.md  dossier_template.md  gurobi_limits.md
examples/: experiments.example.json
main/: constants.py
main/benchmarks/: hash.py  verify_corpus.py
main/compiler/: agg_runner.py  manifest.py  registry.py
main/compiler/solver_io/: dirac3.py  gurobi_miqp.py  gurobi_nlfunc.py  sa_openjij.py
main/compiler/solver_io/helpers/: decode_common.py  identity.py  instance_loader.py  solution_writer.py
main/compiler/solvers/: run_dirac3.py  run_gurobi_miqp.py  run_gurobi_nlfunc.py  run_sa_openjij.py
main/data/: config.py  synthetic_generator.py
main/data/encoding/: apply_cardinality.py  compute_diagnostics.py  instance_builder.py
main/migrations/: __init__.py  run.py
main/migrations/steps/: __init__.py  m0001_v03_to_v04.py  m0002_solver_identity.py  m0003_solution_v05.py
