[project]
name = "hubobench"
version = "0.1.0"
description = "An open benchmarking framework for HUBO (Higher-Order Unconstrained Binary Optimization) solvers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "openjij",
    "python-dotenv",
]

# Extras for the credentialed solvers — install on demand, e.g. `uv sync --extra gurobi`.
# Gurobi additionally needs GRB_LICENSE_FILE; Dirac-3 needs QCI_TOKEN (see .env.example).
[project.optional-dependencies]
gurobi = ["gurobipy"]
dirac3 = ["qci-client", "eqc-models"]

# Single installable package `main` (the import root) lives at the repo root.
# uv installs it editable so `import main...` resolves from anywhere, and the
# old namespace-package + sys.path shims are gone.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]
